--- a/configs/train_cell_seg.yaml
+++ b/configs/train_cell_seg.yaml
@@ -8,7 +8,7 @@ model:
   # number of input channels to the model
   in_channels: 2
   # number of output channels
-  out_channels: 1
+  out_channels: 3
   # determines the order of operators in a single layer (crg - Conv3d+ReLU+GroupNorm)
   layer_order: gcr
   # initial number of feature maps
@@ -19,7 +19,7 @@ model:
   final_sigmoid: true
 # loss function to be used during training
 loss:
-  name: BCEDiceLoss
+  name: CrossEntropyLoss
   # a target value that is ignored and does not contribute to the input gradient
   ignore_index: null
   # skip the last channel in the target (i.e. when last channel contains data not relevant for the loss)
